--- a/Bigram!.ipynb
+++ b/Bigram!.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlVBXSNMAdatzoauLbzk9J"
+      "authorship_tag": "ABX9TyOyE8lLVUNF11shRGXBDVeX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/varun29-git/deep-learning-foundations/blob/main/Bigram!.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -32,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 243,
+      "execution_count": 259,
       "metadata": {
         "id": "urVGbd5eAcun"
       },
@@ -49,36 +60,14 @@
       "cell_type": "code",
       "source": [
         "# Downloading the dataset\n",
-        "!wget https://raw.githubusercontent.com/karpathy/makemore/master/names.txt"
+        "!wget -q https://raw.githubusercontent.com/karpathy/makemore/master/names.txt"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "dn50lKGYA8Zx",
-        "outputId": "0552ed9a-8dbf-4f3d-ecb7-0465a8bd4b68",
         "collapsed": true
       },
-      "execution_count": 244,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2025-12-02 09:39:30--  https://raw.githubusercontent.com/karpathy/makemore/master/names.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 228145 (223K) [text/plain]\n",
-            "Saving to: ‘names.txt.8’\n",
-            "\n",
-            "\rnames.txt.8           0%[                    ]       0  --.-KB/s               \rnames.txt.8         100%[===================>] 222.80K  --.-KB/s    in 0.02s   \n",
-            "\n",
-            "2025-12-02 09:39:30 (12.1 MB/s) - ‘names.txt.8’ saved [228145/228145]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 260,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -99,7 +88,7 @@
       "metadata": {
         "id": "LVRA6OtEBO6h"
       },
-      "execution_count": 245,
+      "execution_count": 261,
       "outputs": []
     },
     {
@@ -121,7 +110,7 @@
       "metadata": {
         "id": "iNJR-lb_mYdY"
       },
-      "execution_count": 246,
+      "execution_count": 262,
       "outputs": []
     },
     {
@@ -142,7 +131,7 @@
       "metadata": {
         "id": "1FyMbhmmmolS"
       },
-      "execution_count": 247,
+      "execution_count": 263,
       "outputs": []
     },
     {
@@ -167,9 +156,9 @@
         },
         "collapsed": true,
         "id": "nH3CsvlJnjTE",
-        "outputId": "4fa794d3-98b4-4df5-9690-2bd335ba95d6"
+        "outputId": "f9f226c2-0e6c-4150-ad77-4dd5baf275f9"
       },
-      "execution_count": 248,
+      "execution_count": 264,
       "outputs": [
         {
           "output_type": "display_data",
@@ -195,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KQaCICWxnuvI",
-        "outputId": "d989c5a8-1cae-4937-8f76-f095cb27565b"
+        "outputId": "d42f53db-323a-4beb-a3c1-c69797b56386"
       },
-      "execution_count": 257,
+      "execution_count": 265,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +198,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 257
+          "execution_count": 265
         }
       ]
     },
@@ -232,9 +221,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "APotwtcav4Mw",
-        "outputId": "95a14083-f76c-44b9-f14f-9615395da675"
+        "outputId": "c72ba342-e035-4c1b-a486-ed0966408cb6"
       },
-      "execution_count": 250,
+      "execution_count": 266,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,9 +265,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X0PT33RdxoHu",
-        "outputId": "672e74bb-aab1-4fbd-f185-5f12e332104a"
+        "outputId": "6ad5aec0-631f-4456-a277-33189f44dfc3"
       },
-      "execution_count": 251,
+      "execution_count": 267,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +277,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 251
+          "execution_count": 267
         }
       ]
     },
@@ -323,7 +312,7 @@
       "metadata": {
         "id": "EVTFPPHKFXHd"
       },
-      "execution_count": 252,
+      "execution_count": 268,
       "outputs": []
     },
     {
@@ -339,9 +328,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6GFqSlIJMqkH",
-        "outputId": "fca33af8-ff18-4e7e-e105-6f81e9e7b00c"
+        "outputId": "8c2582f2-e536-4c8c-dc30-639eecf736c3"
       },
-      "execution_count": 253,
+      "execution_count": 269,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +340,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 253
+          "execution_count": 269
         }
       ]
     },
@@ -366,7 +355,7 @@
       "metadata": {
         "id": "m9okczC5Ntcq"
       },
-      "execution_count": 254,
+      "execution_count": 270,
       "outputs": []
     },
     {
@@ -400,24 +389,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ioz9xBz9OouO",
-        "outputId": "dc29b8a0-0131-4f2f-c2f3-8d1d2e859a8c"
+        "outputId": "d984d859-3541-4d3c-c73a-680624c1fa71"
       },
-      "execution_count": 256,
+      "execution_count": 271,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch : 0, Loss : 2.5457398891448975\n",
-            "Epoch : 100, Loss : 2.501295804977417\n",
-            "Epoch : 200, Loss : 2.484877347946167\n",
-            "Epoch : 300, Loss : 2.476555109024048\n",
-            "Epoch : 400, Loss : 2.4715793132781982\n",
-            "Epoch : 500, Loss : 2.4683210849761963\n",
-            "Epoch : 600, Loss : 2.468034267425537\n",
-            "Epoch : 700, Loss : 2.467780828475952\n",
-            "Epoch : 800, Loss : 2.467536449432373\n",
-            "Epoch : 900, Loss : 2.467299461364746\n"
+            "Epoch : 0, Loss : 3.7686190605163574\n",
+            "Epoch : 100, Loss : 2.58457088470459\n",
+            "Epoch : 200, Loss : 2.5219995975494385\n",
+            "Epoch : 300, Loss : 2.5030462741851807\n",
+            "Epoch : 400, Loss : 2.494628667831421\n",
+            "Epoch : 500, Loss : 2.4900784492492676\n",
+            "Epoch : 600, Loss : 2.4897139072418213\n",
+            "Epoch : 700, Loss : 2.489396810531616\n",
+            "Epoch : 800, Loss : 2.4890944957733154\n",
+            "Epoch : 900, Loss : 2.488806962966919\n"
           ]
         }
       ]
@@ -428,10 +417,25 @@
         "loss.item()"
       ],
       "metadata": {
-        "id": "Z6FgR9xqU7Yn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z6FgR9xqU7Yn",
+        "outputId": "95ad6447-ee72-4531-8389-9e24aed38a20"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 272,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.4885354042053223"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 272
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -463,19 +467,41 @@
         "    print(''.join(out))"
       ],
       "metadata": {
-        "id": "deJeWXBdWpHd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "deJeWXBdWpHd",
+        "outputId": "a02e44c0-48d2-453d-e63b-09f9547a39e2"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tNclIg1KW0Si"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 273,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "anugeenvi\n",
+            "s\n",
+            "mabian\n",
+            "dxfme\n",
+            "nn\n",
+            "silaylelaremah\n",
+            "li\n",
+            "le\n",
+            "epjachalen\n",
+            "diza\n",
+            "k\n",
+            "ach\n",
+            "jondry\n",
+            "kanla\n",
+            "miqrlynaya\n",
+            "vihigea\n",
+            "zalamitiare\n",
+            "phalimasotal\n",
+            "selaro\n",
+            "dgharoni\n"
+          ]
+        }
+      ]
     }
   ]
 }
